Fixed a div overflow reported by @robertobarbera

--- a/css/uno.css
+++ b/css/uno.css
@@ -1221,7 +1221,7 @@ hr {
 	z-index: 900;
 	width: 100%;
 	max-width: none;
-	height: 100%;
+	height: 100vh;
 	background: url(../images/background-cover.jpg) top left no-repeat #666666;
 	background-size: cover; }
 
@@ -1258,7 +1258,8 @@ hr {
 .panel-main {
 	display: table;
 	width: 100%;
-	height: 100%; }
+	height: 100%;
+ 	overflow: auto; }
 
 .no-js .panel-main {
 	width: 40%;
@@ -1269,7 +1270,8 @@ hr {
 	vertical-align: middle;
 	position: relative;
 	z-index: 800;
-	padding: 0 60px; }
+	padding: 0 60px;
+}
 
 .panel-main__content {
 	max-width: 620px;
@@ -1643,7 +1645,7 @@ input[type="tel"] {
 
 	.navigation-wrapper {
 		display: none;
-		position: fixed;
+		/*position: fixed;*/
 		top: 42px;
 		right: 0;
 		left: 0;
